# auxen

./: .gitignore  io.github.auxen.Auxen.yml  meson.build  pyproject.toml  run.sh  test-checklist-batch4.html  test-checklist.html  test-feedback-batch4.html  ui-mockup.html
.serena/: project.yml
auxen/: __main__.py  album_art.py  app.py  artist_image.py  crossfade.py  db.py  equalizer.py  favorites_sync.py  lastfm.py  lyrics.py  m3u.py  matching.py  models.py  mpris.py  notifications.py  player.py  queue.py  sleep_timer.py  smart_playlists.py  window.py
auxen/providers/: base.py  local.py  tidal.py
auxen/views/: about_dialog.py  album_detail.py  artist_detail.py  collection.py  context_menu.py  equalizer_dialog.py  explore.py  favorites.py  home.py  library.py  lyrics_panel.py  mini_player.py  mixes.py  moods.py  now_playing.py  playlist_view.py  properties_dialog.py  queue_panel.py  search.py  settings.py  sidebar.py  sleep_timer_dialog.py  smart_playlist_view.py  splash.py  stats.py  view_mode.py  visualizer.py  widgets.py
data/: auxen  io.github.auxen.Auxen.desktop  io.github.auxen.Auxen.metainfo.xml  style.css
docs/branding/: logo-guide.md
docs/decisions/: batch4-feedback.json
docs/plans/: 2026-03-03-p2-ux-batch.md  2026-03-16-phase4-remaining.md  2026-03-19-phase5a-tidal-home.md
scripts/: create_test_music.py
tests/: test_about.py  test_album_art.py  test_artist_detail.py  test_crossfade.py  test_db.py  test_db_library.py  test_equalizer.py  test_favorites_sync.py  test_lastfm.py  test_local_provider.py  test_lyrics.py  test_m3u.py  test_matching.py  test_mini_player.py  test_models.py  test_nav_history.py  test_notifications.py  test_play_history.py  test_playlist_db.py  test_playlist_export.py  test_queue.py  test_replaygain.py  test_search_history.py  test_sleep_timer.py  test_smart_playlists.py  test_tidal_provider.py  test_visualizer.py
